# authentication-microservice

./: README.md  extract_stats.py
benchmark/: AuthMicroservicePlan.jmx
benchmark/llm/: Results.md  benchmark_statistics.csv
benchmark/results-bunjs/web/: index.html
benchmark/results-c/web/: index.html  statistics.json
benchmark/results-cplusplus/web/: statistics.json
benchmark/results-dart/web/: index.html  statistics.json
benchmark/results-denojs/web/: index.html
benchmark/results-go/web/: index.html  statistics.json
benchmark/results-rust/web/: index.html  statistics.json
benchmark/results-swift/web/: index.html  statistics.json
benchmark/user/: README.md
bunjs/: Notes.md  bun.js
c/: Makefile  auth_service.c  auth_service_v2.c
code/bunjs/: Notes.md  bun.js  bun.lockb  package.json
code/c/: Makefile  auth  auth.c
code/cplusplus/: CMakeLists.txt
code/csharp/: Program.cs
code/dart/: pubspec.yaml
code/go/: Notes.md  go.mod  go.sum  main.go
code/java/: AuthService.java
code/kotlin/: build.gradle.kts
code/llm/bunjs/: bun.js
code/llm/denojs/: deno.ts
code/llm/go/: go.mod
code/objc/: auth_server
code/odin/: README.md
code/php/: auth_service.php
code/user/: README.md
cplusplus/include/: crypto.hpp  jwt.hpp
cplusplus/src/: jwt.cpp  main.cpp  user_store.cpp
go/: Notes.md  go.go  go.sum
nodejs/: app.js
rust/: Cargo.toml
rust/src/: main.rs
submissions/: README.md
swift/: Notes.md  Package.swift
test/: README.md  auth_bench_main.ts  auth_bench_worker.ts  auth_test.ts  bun.lockb  package.json
(+132 files in other folders)
